# aibot-file-upload-analyzer

./: README.md  main.py  pyproject.toml
